{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 680,
  "lineage": "1b7b8ba8-e9c0-e949-b535-9293b9cba702",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:vpc/vpc-0e8bad66",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-052f2f6d",
            "default_route_table_id": "rtb-dc6577b4",
            "default_security_group_id": "sg-8a9e48f0",
            "dhcp_options_id": "dopt-adcef7c5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0e8bad66",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-dc6577b4",
            "owner_id": "177684222297",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b054d792339b6d2",
            "arn": "arn:aws:ec2:eu-west-2:177684222297:elastic-ip/eipalloc-07b054d792339b6d2",
            "association_id": "eipassoc-09e8091db98001b7a",
            "domain": "vpc",
            "id": "eipalloc-07b054d792339b6d2",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-02bb33f7d3242dc16",
            "private_dns": "ip-10-0-1-38.eu-west-2.compute.internal",
            "private_ip": "10.0.1.38",
            "public_dns": "ec2-35-176-63-193.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.176.63.193",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:internet-gateway/igw-0a51de64706d5dd8f",
            "id": "igw-0a51de64706d5dd8f",
            "owner_id": "177684222297",
            "tags": {
              "Name": "main-gw"
            },
            "tags_all": {
              "Name": "main-gw"
            },
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:177684222297:loadbalancer/app/app-lb/ae713cb86df6d30b",
            "arn_suffix": "app/app-lb/ae713cb86df6d30b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-1035490685.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:177684222297:loadbalancer/app/app-lb/ae713cb86df6d30b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02eccc8c780b6d9aa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01eaa72f0b695f375"
              },
              {
                "subnet_id": "subnet-0971c67646f09f9db"
              }
            ],
            "subnets": [
              "subnet-01eaa72f0b695f375",
              "subnet-0971c67646f09f9db"
            ],
            "tags": {
              "Name": "app-lb"
            },
            "tags_all": {
              "Name": "app-lb"
            },
            "vpc_id": "vpc-0e420fb36665c4436",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.ecs_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:177684222297:listener/app/app-lb/ae713cb86df6d30b/127a2cf29f2902cb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:177684222297:targetgroup/app-tg/5260b8fc12472a72",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:177684222297:listener/app/app-lb/ae713cb86df6d30b/127a2cf29f2902cb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:177684222297:loadbalancer/app/app-lb/ae713cb86df6d30b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.app",
            "aws_security_group.ecs_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:177684222297:targetgroup/app-tg/5260b8fc12472a72",
            "arn_suffix": "targetgroup/app-tg/5260b8fc12472a72",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health-check",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:177684222297:targetgroup/app-tg/5260b8fc12472a72",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:177684222297:loadbalancer/app/app-lb/ae713cb86df6d30b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app-tg"
            },
            "tags_all": {
              "Name": "app-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b054d792339b6d2",
            "association_id": "eipassoc-09e8091db98001b7a",
            "connectivity_type": "public",
            "id": "nat-0d336b22801a517ae",
            "network_interface_id": "eni-02bb33f7d3242dc16",
            "private_ip": "10.0.1.38",
            "public_ip": "35.176.63.193",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0971c67646f09f9db",
            "tags": {
              "Name": "main-nat-gw"
            },
            "tags_all": {
              "Name": "main-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:route-table/rtb-04a28b1c189153b80",
            "id": "rtb-04a28b1c189153b80",
            "owner_id": "177684222297",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d336b22801a517ae",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:route-table/rtb-04ebf4b5a7f322a2f",
            "id": "rtb-04ebf4b5a7f322a2f",
            "owner_id": "177684222297",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a51de64706d5dd8f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cefa04f37784ffe",
            "route_table_id": "rtb-04a28b1c189153b80",
            "subnet_id": "subnet-07a544bdc6476c39b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04349c40b591e6d59",
            "route_table_id": "rtb-04a28b1c189153b80",
            "subnet_id": "subnet-0fbb5107eab260149"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d5bb2ac20c74538",
            "route_table_id": "rtb-04ebf4b5a7f322a2f",
            "subnet_id": "subnet-0971c67646f09f9db"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_subnet_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c49a4c0e7999ca26",
            "route_table_id": "rtb-04ebf4b5a7f322a2f",
            "subnet_id": "subnet-01eaa72f0b695f375"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_subnet_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:security-group/sg-02eccc8c780b6d9aa",
            "description": "Allow traffic to ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02eccc8c780b6d9aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240610113925149600000003",
            "name_prefix": "terraform-",
            "owner_id": "177684222297",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-sg"
            },
            "tags_all": {
              "Name": "ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:security-group/sg-00f6e095cffdd3154",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-00f6e095cffdd3154",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgres_sg",
            "name_prefix": "",
            "owner_id": "177684222297",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "postgres-db"
            },
            "tags_all": {
              "Name": "postgres-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rabbit_mq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:security-group/sg-0ae32dea460dde639",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ae32dea460dde639",
            "ingress": [],
            "name": "terraform-20240610113925145400000002",
            "name_prefix": "terraform-",
            "owner_id": "177684222297",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:security-group/sg-070783aa30b13d1d2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6380,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6380
              }
            ],
            "id": "sg-070783aa30b13d1d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6380,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6380
              }
            ],
            "name": "redis_sg",
            "name_prefix": "",
            "owner_id": "177684222297",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "redis"
            },
            "tags_all": {
              "Name": "redis"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:subnet/subnet-07a544bdc6476c39b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a544bdc6476c39b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "177684222297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:subnet/subnet-0fbb5107eab260149",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbb5107eab260149",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "177684222297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:subnet/subnet-0971c67646f09f9db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0971c67646f09f9db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "177684222297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:subnet/subnet-01eaa72f0b695f375",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01eaa72f0b695f375",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "177684222297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:vpc/vpc-0e420fb36665c4436",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0826aec529904044d",
            "default_route_table_id": "rtb-05303d4462d734e1f",
            "default_security_group_id": "sg-009fbf81a85b1973f",
            "dhcp_options_id": "dopt-adcef7c5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e420fb36665c4436",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05303d4462d734e1f",
            "owner_id": "177684222297",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.pets_adaptive",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "faaas_handler",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:security-group/sg-04a41294e423040d1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a41294e423040d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-070783aa30b13d1d2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "faaas-handler-sg-pets-adaptive",
            "name_prefix": "",
            "owner_id": "177684222297",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pets-adaptive",
              "Type": "faaas-handler"
            },
            "tags_all": {
              "Name": "pets-adaptive",
              "Type": "faaas-handler"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.redis",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.pets_adaptive",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "faaas_monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:security-group/sg-067d2963d7f75c63a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067d2963d7f75c63a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-070783aa30b13d1d2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "faaas-monitor-sg-pets-adaptive",
            "name_prefix": "",
            "owner_id": "177684222297",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pets-adaptive",
              "Type": "faaas-monitor"
            },
            "tags_all": {
              "Name": "pets-adaptive",
              "Type": "faaas-monitor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.redis",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.pets_local",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "faaas_handler",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:security-group/sg-004f2f6a6a778ebe4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004f2f6a6a778ebe4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-070783aa30b13d1d2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "faaas-handler-sg-pets-local",
            "name_prefix": "",
            "owner_id": "177684222297",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pets-local",
              "Type": "faaas-handler"
            },
            "tags_all": {
              "Name": "pets-local",
              "Type": "faaas-handler"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.redis",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.pets_proxy",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "faaas_handler",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:security-group/sg-026387b8f75cbdd87",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026387b8f75cbdd87",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-070783aa30b13d1d2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "faaas-handler-sg-pets-proxy",
            "name_prefix": "",
            "owner_id": "177684222297",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pets-proxy",
              "Type": "faaas-handler"
            },
            "tags_all": {
              "Name": "pets-proxy",
              "Type": "faaas-handler"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.redis",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.warehouse_order_from_supplier_adaptive",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "faaas_handler",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:security-group/sg-01b66b80cd05d9574",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b66b80cd05d9574",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-070783aa30b13d1d2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "faaas-handler-sg-warehouse-order-adaptive",
            "name_prefix": "",
            "owner_id": "177684222297",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "warehouse-order-adaptive",
              "Type": "faaas-handler"
            },
            "tags_all": {
              "Name": "warehouse-order-adaptive",
              "Type": "faaas-handler"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.redis",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.warehouse_order_from_supplier_adaptive",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "faaas_monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:security-group/sg-02189185a041ec0ce",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02189185a041ec0ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-070783aa30b13d1d2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "faaas-monitor-sg-warehouse-order-adaptive",
            "name_prefix": "",
            "owner_id": "177684222297",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "warehouse-order-adaptive",
              "Type": "faaas-monitor"
            },
            "tags_all": {
              "Name": "warehouse-order-adaptive",
              "Type": "faaas-monitor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.redis",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.warehouse_order_from_supplier_local",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "faaas_handler",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:security-group/sg-0bf92ccf0589aee50",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf92ccf0589aee50",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-070783aa30b13d1d2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "faaas-handler-sg-warehouse-order-local",
            "name_prefix": "",
            "owner_id": "177684222297",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "warehouse-order-local",
              "Type": "faaas-handler"
            },
            "tags_all": {
              "Name": "warehouse-order-local",
              "Type": "faaas-handler"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.redis",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.warehouse_order_from_supplier_proxy",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "faaas_handler",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:security-group/sg-02c35cf3a9bbc2e28",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c35cf3a9bbc2e28",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-070783aa30b13d1d2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "faaas-handler-sg-warehouse-order-proxy",
            "name_prefix": "",
            "owner_id": "177684222297",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "warehouse-order-proxy",
              "Type": "faaas-handler"
            },
            "tags_all": {
              "Name": "warehouse-order-proxy",
              "Type": "faaas-handler"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.redis",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.warehouse_pricing_summary_report_adaptive",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "faaas_handler",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:security-group/sg-091ca6b547f329854",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091ca6b547f329854",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-070783aa30b13d1d2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "faaas-handler-sg-warehouse-report-adaptive",
            "name_prefix": "",
            "owner_id": "177684222297",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "warehouse-report-adaptive",
              "Type": "faaas-handler"
            },
            "tags_all": {
              "Name": "warehouse-report-adaptive",
              "Type": "faaas-handler"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.redis",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.warehouse_pricing_summary_report_adaptive",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "faaas_monitor",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:security-group/sg-00fd04dc0713fec6b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fd04dc0713fec6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-070783aa30b13d1d2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "faaas-monitor-sg-warehouse-report-adaptive",
            "name_prefix": "",
            "owner_id": "177684222297",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "warehouse-report-adaptive",
              "Type": "faaas-monitor"
            },
            "tags_all": {
              "Name": "warehouse-report-adaptive",
              "Type": "faaas-monitor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.redis",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.warehouse_pricing_summary_report_local",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "faaas_handler",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:security-group/sg-0a4da025b06979e0b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4da025b06979e0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-070783aa30b13d1d2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "faaas-handler-sg-warehouse-report-local",
            "name_prefix": "",
            "owner_id": "177684222297",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "warehouse-report-local",
              "Type": "faaas-handler"
            },
            "tags_all": {
              "Name": "warehouse-report-local",
              "Type": "faaas-handler"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.redis",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.warehouse_pricing_summary_report_proxy",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "faaas_handler",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:177684222297:security-group/sg-0e55f27e729554835",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e55f27e729554835",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-070783aa30b13d1d2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "faaas-handler-sg-warehouse-report-proxy",
            "name_prefix": "",
            "owner_id": "177684222297",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "warehouse-report-proxy",
              "Type": "faaas-handler"
            },
            "tags_all": {
              "Name": "warehouse-report-proxy",
              "Type": "faaas-handler"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e420fb36665c4436"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.redis",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}